[fix] positioning and form size when rendered on mobile screens

--- a/src/components/form.scss
+++ b/src/components/form.scss
@@ -2,10 +2,9 @@
   display: flex;
   height: fit-content;
   flex-direction: column;
-  max-width: 400px;
+  max-width: 42rem;
   width: 100%;
-  margin: 0 auto;
-  padding: 1rem;
+  margin: 0 auto 10rem;
 }
 
 .nameStrict {
